# the-link-shortener

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test.py
backend/src/: .env.template  lifespan_app.py  logger.py  main.py
backend/src/alembic/: env.py
backend/src/api/: links.py
backend/src/core/: config.py  database.py  rate_limiters.py  redis_client.py
backend/src/dependencies/: database.py  rate_limiter_factory.py  redis_client.py
backend/src/models/: short_urls.py
backend/src/repositories/: __init__.py  shortener_url_repository.py
backend/src/schemas/: inner_execeptions.py  pydantic_schemas.py
backend/src/services/: __init__.py  shortener_service.py
backend/src/utils/: decorators.py
backend/tests/: conftest.py
backend/tests/integrations/: test_shortener_service.py
backend/tests/units/test_shortener_url_repository/: test_shortener_repository.py
backend/tests/units/test_shortener_url_service/: test_generate_code.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: ApplicationHead.vue  ApplicationWindow.vue  ExplorerApp.vue  MyComputer.vue  TaskBar.vue  UrlInput.vue  UrlResult.vue
frontend/src/composables/: apps.js  useClipboard.js
frontend/src/styles/: global.css
frontend_new/: index.html  package-lock.json  package.json
frontend_new/src/: App.vue
frontend_new/src/components/: AppFeatures.vue  AppHeader.vue  AppToast.vue  GlowOrb.vue  UrlInput.vue  UrlResult.vue
frontend_new/src/composables/: useClipboard.js  useShortener.js
frontend_new/src/styles/: global.css
src/: .env.template  docker.env  docker.env.template  logger.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_11_23_1549-e81c4bb5016d_create_table.py  2025_12_08_1931-9d53e10e3648_added_unique_constraint_on_fullurl.py
src/api/: __init__.py  links.py
src/core/: config.py  database.py
src/models/: __init__.py  short_urls.py
src/models/mixins/: slug_id_pk_mixin.py
src/repositories/: __init__.py  shortener_url_repository.py
src/schemas/: exceptions.py  pydantic_schemas.py
src/services/: __init__.py  shortener_service.py
src/utils/: decorators.py
tests/: conftest.py
tests/integrations/: test_shortener_service.py
tests/units/test_shortener_url_repository/: test_shortener_repository.py
tests/units/test_shortener_url_service/: test_generate_code.py
