[project]
name = "the-link-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "flake8>=7.3.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "C408", "B010", "F401", "C901", "B008"]
select = ["B", "C", "E", "F", "W", "B9", "I", "SIM"]
# SIM - симплификатор кода, для избегания избыточности и сложности кода

[tool.ruff.lint.isort]
force-single-line = true
