[project]
name = "the-link-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "flake8>=7.3.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.44",
    "testcontainers>=4.14.0",
    "uvicorn>=0.38.0",
]

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "C408", "B010", "F401", "C901", "B008"]
select = ["B", "C", "E", "F", "W", "B9", "I", "SIM"]
# SIM - симплификатор кода, для избегания избыточности и сложности кода

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
addopts = "-p no:warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session" # нужно, чтобы задать время жизни event_loop(для асинхронности) для тестов,
# в нашем случае event_loop будет создан для всех тестов один(на период все сессии тестирования)
